force-app/main/default/objects/Consultant__c/validationRules/DOBLessThanDOJ.validationRule-meta.xml
<ValidationRule>
    <fullName>DOBLessThanDOJ</fullName>
    <active>true</active>
    <description>Date of Birth should be less than Date of Joining.</description>
    <errorConditionFormula>Date_of_Birth__c  &gt;=  Date_of_Joining__c</errorConditionFormula>
    <errorMessage>Date of Birth should be less than Date of Joining.</errorMessage>
</ValidationRule>