force-app/main/default/objects/Consultant__c/validationRules/DOBShouldBeFuture.validationRule-meta.xml
<ValidationRule>
    <fullName>DOBShouldBeFuture</fullName>
    <active>true</active>
    <description>Date of Birth should not be a Future Date.</description>
    <errorConditionFormula>Date_of_Birth__c &gt;= TODAY()</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Date of Birth cannot be a Future Date.</errorMessage>
</ValidationRule>