force-app/main/default/objects/Consultant__c/validationRules/DOJAndJobRoleMandatoryForEmployee.validationRule-meta.xml
<ValidationRule>
    <fullName>DOJAndJobRoleMandatoryForEmployee</fullName>
    <active>true</active>
    <description>Date of Joining and Job Role Fields necessary for Consultant Type as Employee</description>
    <errorConditionFormula>AND(ISPICKVAL(Type__c, &quot;Employee&quot;), OR(ISBLANK(Date_of_Joining__c), ISBLANK(Job_Role__c)))</errorConditionFormula>
    <errorMessage>Date of Joining and Job Role Fields Mandatory for Employees</errorMessage>
</ValidationRule>