force-app/main/default/objects/Consultant__c/validationRules/EmailForVendors.validationRule-meta.xml
<ValidationRule>
    <fullName>EmailForVendors</fullName>
    <active>true</active>
    <description>Email Mandatory for Vendors having an experience of more than 1 Year</description>
    <errorConditionFormula>AND( ISPICKVAL(Type__c, &quot;Vendor&quot;), ISBLANK(Email__c), IF(Experience__c &gt; 1, true, false) )</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Please Enter your Email.</errorMessage>
</ValidationRule>