force-app/main/default/objects/Consultant__c/validationRules/PhoneMandatoryForEmployee.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneMandatoryForEmployee</fullName>
    <active>true</active>
    <description>Phone Number Field mandatory for Employees</description>
    <errorConditionFormula>AND( ISPICKVAL( Type__c, &quot;Employee&quot; ), ISBLANK( Phone__c ) )</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Please Enter your Phone Number (Mandatory for Employees)</errorMessage>
</ValidationRule>