force-app/main/default/objects/Consultant__c/validationRules/ValidationRuleForAadhar.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationRuleForAadhar</fullName>
    <active>true</active>
    <description>REGEX expression Validation Rule for Aadhar Number</description>
    <errorConditionFormula>NOT( REGEX( Aadhar_Number__c, &quot;[0-9]{4} [0-9]{4} [0-9]{4}&quot; ) )</errorConditionFormula>
    <errorDisplayField>Aadhar_Number__c</errorDisplayField>
    <errorMessage>Enter the Aadhar Number in the Format of 9999 9999 9999</errorMessage>
</ValidationRule>