force-app/main/default/objects/Consultant__c/validationRules/ValidationRuleForPAN.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationRuleForPAN</fullName>
    <active>true</active>
    <description>PAN Number should be of proper Format</description>
    <errorConditionFormula>NOT( REGEX(  PAN__c, &quot;[A-Z]{5}[0-9]{5}&quot; ) )</errorConditionFormula>
    <errorDisplayField>PAN__c</errorDisplayField>
    <errorMessage>PAN Number should be in the Format of ABCDE12345</errorMessage>
</ValidationRule>